[package]
name = "halo-sqlbuilder"
version = "1.0.0"
edition = "2024"
description = "Composable SQL builder and argument collector"
documentation = "https://docs.rs/halo-sqlbuilder"
homepage = "https://github.com/halo-space/sql-builder"
repository = "https://github.com/halo-space/sql-builder"
license = "MIT"
authors = ["halo-space"]
readme = "README.md"

[lib]
name = "halo_space"

[dependencies]
dyn-clone = "1.0.20"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "builder_bench"
harness = false
